# rx

./: .clang-format  CMakeLists.txt  LICENSE  README.md  format.bat  format.sh  lefthook.json
Headers/Rx/: Device.h  DeviceSpec.h  Engine.h  Result.h  Rx.h  _Expose.h
Sources/: DeviceSpec.c  Engine.c  Result.h
Sources/Device/: Core.c  Extra.c  Extra.h
Tests/: Basic.c
headers/rx/: device.h  device_spec.h  engine.h  engine_spec.h  private.h  result.h  rx.h
sources/: device.c  device.h  engine.c  result.h
tests/: basic.c
